# AI

./: .env.example  .gitignore  AI_Video_Gesture_Analysis_Tools_Comparison.docx  README.md  opening_stock-template.csv  pyproject.toml  suppliers-template.csv  thohor_phase1_tool_validation_plan.md  استمارة 2026.xlsx
phase1_validation/config/: tool_matrix.yml
phase1_validation/outputs/normalized/aws_rekognition/: sample_01.json
phase1_validation/outputs/normalized/deepgram/: sample_01.json
phase1_validation/outputs/normalized/local_audio/: sample_01.json
phase1_validation/outputs/normalized/mediapipe/: sample_01.json
phase1_validation/reports/: Thohor_Stakeholder_Evaluation_Report_sample_01.docx  sample_01_comparison.csv  sample_01_comparison.json  sample_01_rubric_readiness.csv  sample_01_rubric_readiness.json  sample_01_rubric_readiness.md  sample_01_speaker_evaluation.csv  sample_01_speaker_evaluation.json  sample_01_speaker_evaluation.md  sample_01_summary.md
phase1_validation/samples/sample_01/: metadata.json
scripts/: build_stakeholder_docx.py
src/thohor_validation/: __init__.py  cli.py
src/thohor_validation/adapters/: aws_adapter.py  azure_adapter.py  base.py  deepgram_adapter.py  hume_adapter.py  import_adapter.py  local_audio_adapter.py  mediapipe_adapter.py  openai_adapter.py  openai_rubric_adapter.py  registry.py
src/thohor_validation/core/: io.py  models.py  paths.py  rubric.py
src/thohor_validation/reporting/: cleanup.py  evaluation.py  report.py  rubric_engine.py
tests/: test_rubric.py
(+8 files in other folders)
