[project]
name = "thohor-validation"
version = "0.1.0"
description = "Phase 1 video tool validation pipeline for matching AI analysis outputs against the Thohor 2026 rubric."
requires-python = ">=3.10"
dependencies = [
  "boto3>=1.34",
  "click>=8.1",
  "ffmpeg-python>=0.2",
  "mediapipe>=0.10",
  "numpy>=1.24",
  "openai>=1.40",
  "opencv-python>=4.8",
  "openpyxl>=3.1",
  "pandas>=2.0",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "requests>=2.31",
  "rich>=13.7",
]

[project.optional-dependencies]
deepgram = ["deepgram-sdk>=3.4"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
thohor = "thohor_validation.cli:cli"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
